--- a/index.css
+++ b/index.css
@@ -52,22 +52,40 @@ p {
   margin-bottom: 5px;
 }
 
+.header-placement {
+  background-color: tomato;
+  display: flex;
+  justify-content: flex-end;
+  max-width: inherit;
+  position: absolute;
+  right: -80px;
+  top: -10vh;
+  width: inherit;
+}
+
 header {
   background-color: #aab4b8;
-  border-radius: 0 0 2px 2px;
-  box-shadow: 0px 2px 1px #5c6e7566;
+  border-radius: 2px;
+  box-shadow: 2px 2px 2px #abb7bb99;
   color: #fff;
   display: flex;
   font-family: Montserrat, sans-serif;
   font-weight: 300;
   justify-content: space-between;
+  max-width: inherit;
+  overflow: hidden;
+  opacity: 1;
   padding: 5px 80px;
   position: fixed;
-  margin: clamp(10px, 5vw, 30px) 0 0 -80px;
-  max-width: inherit;
-  top: 0;
-  transition: margin .3s ease-out, background-color .3s;
+  transition: max-width .3s ease-out;
+  white-space: nowrap;
   width: inherit;
+}
+
+header span,
+header a {
+  opacity: 1;
+  transition: opacity .5s .1s;
 }
 
 header .contact-details {
@@ -77,7 +95,24 @@ header .contact-details {
 }
 
 .sticky-header {
-  margin-top: 0;
+  max-width: 20px;
+  padding: 5px 6px;
+}
+
+.sticky-header span,
+.sticky-header a {
+  opacity: 0;
+  transition: opacity .1s;
+}
+
+.sticky-header .E {
+  opacity: 1;
+  left: 4px;
+  position: relative;
+}
+
+.sticky-header:hover {
+  
 }
 
 header:hover {
@@ -112,9 +147,10 @@ p a:visited {
 
 }
 
-.container {
-  margin: clamp(50px, 15vw, 100px) auto 0;
+.main-container {
+  margin: 15vh auto 0;
   max-width: 80ch;
+  position: relative;
   width: 80vw;
 }
 
