--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ p {
   justify-content: flex-end;
   max-width: inherit;
   position: absolute;
-  right: -80px;
+  right: clamp(-80px, -8.5vw, -40px);
   top: -10vh;
   width: inherit;
 }
@@ -89,7 +89,7 @@ header {
   max-width: inherit;
   opacity: 1;
   overflow: hidden;
-  padding: 5px 80px;
+  padding: 5px clamp(40px, 8.5vw, 80px);
   position: fixed;
   transition: max-width .3s ease-out;
   white-space: nowrap;
@@ -122,12 +122,14 @@ header:hover,
 .collapsed-header a {
   opacity: 0;
   transition: opacity .1s;
+  pointer-events: none;
 }
 
 .collapsed-header .E {
   opacity: 1;
   left: 4px;
   position: relative;
+  transition: left .5s;
 }
 
 .cursor-blocker {
@@ -215,14 +217,64 @@ footer .contact-details {
   top: 2px;
 }
 
+.footer-personal,
+.footer-links {
+  display: contents;
+}
+
 /* WHEN HORIZONTAL NAVBAR DOESN'T FIT */
 @media only screen and (max-width: 700px) {
-  header {
-    flex-direction: column;
+  .main-container {
+    margin-top: calc(80px + 10vh);
   }
 
-  header .vertical-divider {
+  .header-placement {
+    position: unset;
+    max-width: 100%;
+  }
+
+  header,
+  .collapsed-header {
+    flex-direction: column;
+    right: 2px;
+    top: 5vh;
+  }
+
+  header {
+    max-height: 6rem;
+    padding-left: 90px;
+    transition: max-width .2s ease-out, max-height .2s .2s ease-out;
+  }
+
+  .collapsed-header {
+    max-height: 20px;
+    transition: padding .2s .2s, max-width .2s .2s ease-out, max-height .2s ease-out;
+  }
+
+  header > *,
+  .collapsed-header > * {
+    position: relative;
+    left: 5vw;
+  }
+
+  header .vertical-divider,
+  footer .vertical-divider {
     display: none;
+  }
+
+  footer {
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .footer-personal {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+
+  .footer-links {
+    display: inline;
   }
 }
 
@@ -238,6 +290,12 @@ footer .contact-details {
   /* PARAGRAPHS and LIST ITEMS */
   p, li {
     text-align: left;
+  }
+
+  /* HEADER */
+  header,
+  .collapsed-header {
+    right: -2px;
   }
 
   /* SKILLS SECTION */
