--- a/index.css
+++ b/index.css
@@ -131,15 +131,6 @@ header:hover,
   transition: left .5s;
 }
 
-.cursor-blocker {
-  background-color: transparent;
-  display: block;
-  width: 31px;
-  height: 30px;
-  z-index: 10;
-  position: fixed;
-}
-
 /* LINKS */
 a {
   color: #13678b;
@@ -263,10 +254,38 @@ footer a {
 
 /* WHEN HORIZONTAL NAVBAR DOESN'T FIT */
 @media only screen and (max-width: 700px) {
+  .large-icon {
+    display: none;
+  }
+
+  .small-icon {
+    display: unset;
+  }
+
+  footer .linkedin {
+    top: 2px;
+  }
+}
+
+/* SMALL SCREENS */
+@media only screen and (max-width: 520px) {
   .main-container {
     margin-top: calc(80px + 10vh);
   }
 
+  /* HEADINGS */
+  .heading-4 {
+    max-width: 17ch;
+    justify-content: start;
+    flex-wrap: wrap;
+  }
+
+  /* PARAGRAPHS and LIST ITEMS */
+  p, li {
+    text-align: left;
+  }
+
+  /* HEADER and FOOTER */
   .header-placement {
     position: unset;
     max-width: 100%;
@@ -275,12 +294,12 @@ footer a {
   header,
   .collapsed-header {
     flex-direction: column;
-    right: 2px;
+    right: -2px;
     top: 5vh;
   }
 
   header {
-    max-height: 6rem;
+    max-height: 5rem;
     padding-left: 90px;
     transition: max-width .2s ease-out, max-height .2s .2s ease-out;
   }
@@ -301,8 +320,24 @@ footer a {
     display: none;
   }
 
-  .github.large-icon {
-    margin-left: -4px;
+  header .linkedin,
+  header .github,
+  header .linkedin-github-divider {
+    position: relative;
+  }
+
+  header .linkedin {
+    bottom: -6px;
+  }
+
+  header .github {
+    bottom: 33px;
+    left: 36px;
+  }
+
+  header .linkedin-github-divider {
+    bottom: 18px;
+    left: 50px;
   }
 
   footer {
@@ -318,30 +353,11 @@ footer a {
   }
 
   .footer-links {
-    display: flex;
-    position: relative;
-    top: 2px;
-  }
-}
-
-/* SMALL SCREENS */
-@media only screen and (max-width: 520px) {
-  /* HEADINGS */
-  .heading-4 {
-    max-width: 17ch;
-    justify-content: start;
-    flex-wrap: wrap;
+    display: inline;
   }
 
-  /* PARAGRAPHS and LIST ITEMS */
-  p, li {
-    text-align: left;
-  }
-
-  /* HEADER */
-  header,
-  .collapsed-header {
-    right: -2px;
+  footer .linkedin {
+    top: 3px;
   }
 
   /* SKILLS SECTION */
