--- a/index.css
+++ b/index.css
@@ -77,6 +77,34 @@ p {
   width: inherit;
 }
 
+.language-switch {
+  font: 10pt Montserrat, sans-serif;
+  position: fixed;
+  margin-top: 50px;
+  margin-right: -8px;
+  transition: margin .3s ease-out;
+  z-index: 20;
+}
+
+.language-switch * {
+  color: #99afbd;
+  margin: 1px;
+  transition: all .3s;
+}
+
+.language-switch span {
+  font-size: 13pt;
+  font-weight: 300;
+}
+
+.language-switch.top-position {
+  margin-right: 8px
+}
+
+.language-switch a:hover {
+  color: initial;
+}
+
 header {
   align-items: baseline;
   background-color: #99afbd;
@@ -132,12 +160,11 @@ header:hover,
 }
 
 .cursor-blocker {
-  background-color: transparent;
-  display: block;
-  width: 31px;
-  height: 30px;
+  width: 40px;
+  height: 33px;
   z-index: 10;
   position: fixed;
+  margin-right: -10px;
 }
 
 /* LINKS */
@@ -185,6 +212,7 @@ bottom: -3px;
 /* SKILLS SECTION */
 .skills {
   display: flex;
+  justify-content: space-evenly;
 }
 
 .skills h3 {
@@ -267,6 +295,20 @@ footer a {
   }
 }
 
+/* WHEN LAUNGUAGE SWITCH TOUCHES WINDOW BORDER */
+@media only screen and (max-width: 810px) and (min-width: 520px) {
+  .language-switch {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-right: 8px;
+  }
+
+  .language-switch span {
+    transform: translate(5px, 5px) rotate(55deg);
+  }
+}
+
 /* WHEN HORIZONTAL NAVBAR DOESN'T FIT */
 @media only screen and (max-width: 700px) {
   .large-icon {
@@ -286,6 +328,28 @@ footer a {
 @media only screen and (max-width: 520px) {
   .main-container {
     margin-top: calc(80px + 10vh);
+  }
+
+  .cursor-blocker {
+    top: 5vh;
+    right: 5px;
+  }
+
+  .language-switch {
+    opacity: 1;
+    top: calc(5vh - 45px);
+    margin-right: -30px;
+    transition: opacity .3s, margin .3s ease-out;
+  }
+
+  .language-switch * {
+    color: white;
+  }
+
+  .collapsed.language-switch {
+    pointer-events: none;
+    display: inline;
+    opacity: 0;
   }
 
   /* HEADINGS */
