--- a/index.css
+++ b/index.css
@@ -1,4 +1,10 @@
 /* BODY */
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+}
+
 body {
   background-color: #f5f3ef;
   margin: 0;
@@ -10,6 +16,7 @@ body {
 }
 
 .main-container {
+  animation: fade-in .5s;
   margin: 15vh auto 0;
   max-width: 80ch;
   position: relative;
