--- a/index.css
+++ b/index.css
@@ -100,12 +100,16 @@ p {
 }
 
 .language-switch span {
-  font-size: 13pt;
-  font-weight: 300;
+  font-size: 18pt;
+  font-weight: 100;
 }
 
 .language-switch.top-position {
-  margin-right: 8px
+  margin-right: 8px;
+}
+
+.language-switch.top-position span {
+  transform: none !important;
 }
 
 .language-switch a:hover {
@@ -124,7 +128,6 @@ header {
   justify-content: space-between;
   max-width: inherit;
   opacity: 1;
-  overflow: hidden;
   padding: 5px clamp(40px, 8.5vw, 80px);
   position: fixed;
   transition: max-width .3s ease-out, background-color .3s;
@@ -192,10 +195,6 @@ p a:visited {
   height: 18px;
 }
 
-.linkedin.white {
-  filter: sepia(200%) saturate(0%) brightness(250%);
-}
-
 .github.large-icon { 
   height: 25px;
   margin: -4px 0;
@@ -214,6 +213,32 @@ bottom: -3px;
 
 .small-icon {
   display: none;
+}
+
+i:hover,
+a:hover {
+  opacity: .75;
+}
+
+.tooltip {
+  bottom: 1.2ch;
+  font-size: 8pt;
+  font-weight: 500;
+  margin-bottom: -2ch;
+  opacity: 0;
+  pointer-events: none;
+  position: relative;
+  transition: opacity .3s;
+  width: 0;
+}
+
+.tooltip.open {
+  opacity: .9;
+  transition: opacity .3s .2s;
+}
+
+.white {
+  filter: sepia(200%) saturate(0%) brightness(250%);
 }
 
 /* SKILLS SECTION */
@@ -303,7 +328,7 @@ footer a {
 }
 
 /* WHEN LAUNGUAGE SWITCH TOUCHES WINDOW BORDER */
-@media only screen and (max-width: 810px) and (min-width: 520px) {
+@media only screen and (max-width: 810px) and (min-width: 550px) {
   .language-switch.top-position {
     display: unset;
     margin-right: 12px;
@@ -315,10 +340,8 @@ footer a {
     margin-right: 8px;
   }
 
-  .collapsed.language-switch span {
-    transform: translate(2px, 8px) rotate(90deg);
-    font-size: 18pt;
-    font-weight: 100;
+  .language-switch span {
+    transform: translate(2px, 8px) rotate(90deg) !important;
     margin: -10px 0;
   }
 }
@@ -336,10 +359,18 @@ footer a {
   footer .linkedin {
     top: 2px;
   }
+
+  .tooltip {
+    position: initial;
+  }
+
+  .tooltip .long-version {
+    display: none;
+  }
 }
 
 /* SMALL SCREENS */
-@media only screen and (max-width: 520px) {
+@media only screen and (max-width: 550px) {
   .main-container {
     margin-top: calc(80px + 10vh);
   }
@@ -352,8 +383,8 @@ footer a {
   /* LANGUAGE SWITCH */
   .language-switch {
     opacity: 1;
-    top: calc(5vh + 15px);
-    margin-right: 10px !important;
+    top: calc(5vh + 5px);
+    margin-right: 15px !important;
     right: 0;
     transition: opacity .3s .2s, margin .3s ease-out;
   }
@@ -410,9 +441,7 @@ footer a {
     display: none;
   }
 
-  header .linkedin,
-  header .github,
-  header .linkedin-github-divider {
+  header * {
     position: relative;
   }
 
@@ -420,14 +449,41 @@ footer a {
     bottom: -6px;
   }
 
-  header .github {
-    bottom: 33px;
-    left: 36px;
-  }
-
   header .linkedin-github-divider {
     bottom: 18px;
     left: 26px;
+  }
+
+  header .github {
+    bottom: 34px;
+    left: 36px;
+  }
+
+  .download-divider {
+    bottom: 59px;
+    left: 60px;
+  }
+
+  i {
+    fill: white;
+    bottom: 77px;
+    left: 71px;
+  }
+
+  .tooltip .long-version {
+    display: initial;
+  }
+
+  .tooltip .long-version br {
+    display: none;
+  }
+
+  .tooltip {
+    height: 10px;
+    width: 10px;
+    left: 92px;
+    bottom: 92px;
+    position: relative;
   }
 
   footer {
